test/files/neg/plugin-multiple-rafter/testsource.scala
object Test extends Application {
  println("multi-rafter")
}

